# bergpb.github.io

./: .gitignore  404.html  CNAME  Makefile  README.md  about.html  atom.xml  authors.html  categories.html  index.html  instalacao-micropython.html  instalacao-postgres-linux.html  instalacao-python-pip.html  instalacao-yarn.html  pelicanconf.py  primeira-aplicacao-flask.html  primeiros-passos-rust.html  publishconf.py  pyproject.toml  python-venv.html  requirements.txt  tags.html
.github/workflows/: build-and-deploy.yml
archive/: index.html
author/: berg-paulo.html
category/: banco-de-dados.html  flask.html  javascript.html  linguagem.html  microcontroladores.html  programacao.html  python.html
content/: async-await-javascript.md  instalacao-micropython.md  instalacao-postgres-linux.md  instalacao-python3-pip3.md  primeira-aplicacao-flask.md  primeiros-passos-rust.md  python-venv.md  yarn-instalacao.md
content/pages/: About.md
drafts/: async-await-javascript.html
feeds/: all.atom.xml  banco-de-dados.atom.xml  berg-paulo.atom.xml  berg-paulo.rss.xml  flask.atom.xml  javascript.atom.xml  linguagem.atom.xml  microcontroladores.atom.xml  programacao.atom.xml  python.atom.xml
plugins/assets/: assets.py
tag/: database.html  environments.html  flask.html  javascript.html  linux.html  microcontroladores.html  microframework.html  pip.html  postgresql.html  python.html  rust.html  venv.html  virtualenv.html  yarn.html
theme/css/: style.min.css
theme/templates/: 404.html  archives.html  article.html  base.html  index.html  page.html  period_archives.html  (+1 more)
(+2 files in other folders)
