[tool.poetry]
name = "bergpb.github.io"
version = "0.1.0"
description = ""
authors = ["bergpb <lindembergdepaulo@@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
markdown = "^3.2.1"
pelican = "^4.2.0"
typogrify = "^2.0.7"
webassets = "^2.0"
cssmin = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
